# PyBot

./: .gitignore  LICENSE  MANIFEST.in  README.md  bothandler.py  imagerecognitiontest.py  main.py  pybot.py  runtest.py  setup.cfg  setup.py  testing.py  vision.py  windowcapture.py
PyBot/: BotController.py
examples/: LBR-MLC auto crunch.py  main.py
pybot/: __init__.py  bothandler.py  pybot.py
pybot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pybot/src/: bothandler.py  vision.py  windowhandler.py
pybotter/: __init__.py  bothandler.py  pybotter.py  soundhandler.py  vision.py  windowhandler.py
pybotter/template/: template.py
src/: bothandler.py
src_py/: bothandler.py
temp/: main.py  mousemacro.py  setup-01  testing.py
temp/old files 07.01.2022/: windowcapture.py
template/: template.py
testing/: testing.py
tests/: imagerecognitiontest.py  runtest.py
