[options]
packages = find:
py_modules = pybot
install_requires =
    pywin32 >= 227
    numpy >= 1.19
    opencv-contrib-python >= 4.5
    keyboard >= 0.13
    pygame >= 2.1


[metadata]
name = pybot
version = 0.0.1
description = This package contains functions for doing automation tasks
author = Cedrus Maize
author_email = walter.tungo@gmail.com
url = https://github.com/s3794510/pybot
license_files = LICENSE
keywords =
    python
    opencv
    mouse
    keyboard
    automation
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows :: Windows 10
long_description = file: README.md
long_description_content_type = text/markdown

[options.extras_require]
dev =
