[options]
packages = find:
include_package_data = True
install_requires =
    pywin32 >= 227
    numpy >= 1.19
    opencv-contrib-python >= 4.5
    keyboard >= 0.13
python_requires = < 3.12, >= 3.0

[options.package_data]
* = *.mp3

[metadata]
name = pybotter
version = 0.1.0
description = This module is for doing automation tasks on Windows 10 or above
author = Cedrus Z Maize
author_email = servant@theecee.dev
url = https://github.com/s3794510/pybotter
license_files = LICENSE
keywords =
    python
    opencv
    mouse
    keyboard
    automation
classifiers =
    Development Status :: 1 - Planning
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows :: Windows 10
long_description = file: README.md
long_description_content_type = text/markdown

